[package]
name = "jia-parse"
version = "0.1.0"
edition = "2021"

[lib]
name = "jia_parse"
path = "src/lib.rs"

[[bin]]
name = "jia-parse"
path = "src/bin/jia-parse.rs"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
