[package]
name = "jia-parse"
version = "1.0.0"
edition = "2021"
description = "Command-line and library parser for PDDL and Jia model files."
readme = "README.md"
repository = "https://github.com/Feasbl/jia-parse"
homepage = "https://github.com/Feasbl/jia-parse"
documentation = "https://docs.rs/jia-parse"
license = "Apache-2.0"
keywords = ["pddl", "parser", "planning", "jia", "cli"]
categories = ["command-line-utilities", "parser-implementations"]

[lib]
name = "jia_parse"
path = "src/lib.rs"

[[bin]]
name = "jia-parse"
path = "src/bin/jia-parse.rs"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
